--- a/CITIZEN-project.html
+++ b/CITIZEN-project.html
@@ -47,7 +47,7 @@
   ======================================================== -->
   </head>
 
-  <body class="portfolio-details-page">
+  <body class="AUTOWAG-project.html">
     <header
       id="header"
       class="header d-flex flex-column justify-content-center"
@@ -98,10 +98,10 @@
           <nav class="breadcrumbs">
             <ol>
               <li><a href="index.html">Home</a></li>
-              <li class="current">Vehicle Spare Parts Management System</li>
+              <li class="current">CITIZEN Connect</li>
             </ol>
           </nav>
-          <h1>Vehicle Spare Parts Management System</h1>
+          <h1>CITIZEN Connect</h1>
         </div>
       </div>
       <!-- End Page Title -->
@@ -115,7 +115,7 @@
           >
             <div class="video-wrapper">
               <iframe
-                src="https://www.youtube.com/embed/eMMsD80Jm-w"
+                src="https://www.youtube.com/embed/MDQUHkyAGxQ"
                 title="YouTube video player"
                 frameborder="0"
                 allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
@@ -127,44 +127,9 @@
           <div class="row justify-content-between gy-4 mt-4">
             <div class="col-lg-8" data-aos="fade-up">
               <div class="portfolio-description">
-                <h2>This is Vehicle Spare Parts Management System</h2>
+                <h2>CITIZEN Connect</h2>
                 <p>
-                  I have created a Vehicle Spare Parts Management System using
-                  JSP and Servlet based on the JAVA language. By using this
-                  vehicle Spare Parts Management System Stock managers can do
-                  their stock managing operation efficiently.
-                </p>
-                <p>
-                  In this system, I have to implement essential stock managing
-                  operations such as online stock payment, requesting stock
-                  details, and adding stock details. All these operations of
-                  vehicle spare parts managing. To do that, I have created the
-                  spare part manager dashboard in this system. By using this
-                  dashboard, the bank manager can easily communicate with their
-                  stakeholders
-                </p>
-
-                <p>
-                  In this system, I have to implement essential stock managing
-                  operations such as online stock payment, requesting stock
-                  details, and adding stock details. All these operations of
-                  vehicle spare parts managing. To do that, I have created the
-                  spare part manager dashboard in this system. By using this
-                  dashboard, the bank manager can easily communicate with their
-                  stakeholders
-                </p>
-
-                <p>
-                  In this system, I have to implement essential stock managing
-                  operations such as online stock payment, requesting stock
-                  details, and adding stock details. All these operations of
-                  vehicle spare parts managing. To do that, I have created the
-                  spare part manager dashboard in this system. By using this
-                  dashboard, the bank manager can easily communicate with their
-                  stakeholders
-                </p>
-              </div>
-            </div>
+                  we present our group project developed during the AF module at SLIIT. We showcase the process of building a comprehensive Government Complaint System using the MERN stack (MongoDB, Express.js, React, and Node.js). Our complaint system aims to provide a user-friendly interface for citizens to report their grievances and concerns to the government. Through this system, users can submit complaints, track their progress, and receive updates on the status of their complaints. We start by explaining the key features and functionality of our Government Complaint System, including user registration, login, and authentication. We then demonstrate how users can create and submit complaints, attaching relevant information and supporting documents. Additionally, we discuss the backend implementation using Node.js and Express.js, where we handle complaint data, perform validation, and store it in a MongoDB database. We explain the API endpoints used for communication between the frontend and backend. The frontend of our system is built using React, ensuring a responsive and intuitive user interface....            </div>
 
             <div class="col-lg-3" data-aos="fade-up" data-aos-delay="100">
               <div class="portfolio-info">
@@ -173,8 +138,8 @@
                   <li><strong>Category</strong> Web design</li>
 
                   <li>
-                    <a href="#" class="btn-visit align-self-start"
-                      >Visit Website</a
+                    <a href="https://www.youtube.com/redirect?event=video_description&redir_token=QUFFLUhqbVhkTi1aNThfRTJkMTlzUWx2TWs1SE5vRjNad3xBQ3Jtc0treWplOGxsVVRoN2VmUzNicWFsTm9SOUdJcy01SVB6ZUh1ZGxWVnluVVIxeXo0MlNCbVBEZUJ0cEtUbTlkQ1lkQzdIZ3V4Z1gwT3RSUS13T3F3RTdZTE9VR1A1eDVhR0VaX2lRTk9xRnFYdDE3V1AwOA&q=https%3A%2F%2Fgithub.com%2Fthushanvithana%2FAF_Assignment.git&v=MDQUHkyAGxQ" class="btn-visit align-self-start"
+                      >Project source code</a
                     >
                   </li>
                 </ul>
