--- a/Microservice-project.html
+++ b/Microservice-project.html
@@ -47,7 +47,7 @@
   ======================================================== -->
   </head>
 
-  <body class="portfolio-details-page">
+  <body class="AUTOWAG-project.html">
     <header
       id="header"
       class="header d-flex flex-column justify-content-center"
@@ -98,10 +98,10 @@
           <nav class="breadcrumbs">
             <ol>
               <li><a href="index.html">Home</a></li>
-              <li class="current">Vehicle Spare Parts Management System</li>
+              <li class="current">Microservice Architecture | MERN Stack Group Project</li>
             </ol>
           </nav>
-          <h1>Vehicle Spare Parts Management System</h1>
+          <h1>Microservice Architecture | MERN Stack Group Project</h1>
         </div>
       </div>
       <!-- End Page Title -->
@@ -115,7 +115,7 @@
           >
             <div class="video-wrapper">
               <iframe
-                src="https://www.youtube.com/embed/eMMsD80Jm-w"
+                src="https://www.youtube.com/embed/-iIOJeOXfpQ"
                 title="YouTube video player"
                 frameborder="0"
                 allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
@@ -127,43 +127,9 @@
           <div class="row justify-content-between gy-4 mt-4">
             <div class="col-lg-8" data-aos="fade-up">
               <div class="portfolio-description">
-                <h2>This is Vehicle Spare Parts Management System</h2>
+                <h2>Microservice Architecture | MERN Stack Group Project</h2>
                 <p>
-                  I have created a Vehicle Spare Parts Management System using
-                  JSP and Servlet based on the JAVA language. By using this
-                  vehicle Spare Parts Management System Stock managers can do
-                  their stock managing operation efficiently.
-                </p>
-                <p>
-                  In this system, I have to implement essential stock managing
-                  operations such as online stock payment, requesting stock
-                  details, and adding stock details. All these operations of
-                  vehicle spare parts managing. To do that, I have created the
-                  spare part manager dashboard in this system. By using this
-                  dashboard, the bank manager can easily communicate with their
-                  stakeholders
-                </p>
-
-                <p>
-                  In this system, I have to implement essential stock managing
-                  operations such as online stock payment, requesting stock
-                  details, and adding stock details. All these operations of
-                  vehicle spare parts managing. To do that, I have created the
-                  spare part manager dashboard in this system. By using this
-                  dashboard, the bank manager can easily communicate with their
-                  stakeholders
-                </p>
-
-                <p>
-                  In this system, I have to implement essential stock managing
-                  operations such as online stock payment, requesting stock
-                  details, and adding stock details. All these operations of
-                  vehicle spare parts managing. To do that, I have created the
-                  spare part manager dashboard in this system. By using this
-                  dashboard, the bank manager can easily communicate with their
-                  stakeholders
-                </p>
-              </div>
+                  Welcome to our Online Herbal Store, a dynamic and user-friendly platform designed to provide a seamless shopping experience for all your herbal needs. Developed as a group project by students at SLIIT, we have implemented a cutting-edge microservice architecture using the MERN stack (MongoDB, Express.js, React.js, Node.js) to ensure optimum performance and scalability. Our Online Herbal Store offers a wide range of herbal products, carefully curated and sourced from trusted suppliers. Whether you re seeking natural remedies, organic skincare, or herbal supplements, our store has everything you need to support your holistic well-being. With our microservice architecture, we have divided our application into independent, loosely coupled services that communicate with each other via APIs. This modular approach allows for easy maintenance, scalability, and fault tolerance. Each microservice handles specific functionalities, such as product management, user authentication, order processing, and inventory management, ensuring a smooth and efficient workflow. ....              </div>
             </div>
 
             <div class="col-lg-3" data-aos="fade-up" data-aos-delay="100">
@@ -173,8 +139,8 @@
                   <li><strong>Category</strong> Web design</li>
 
                   <li>
-                    <a href="#" class="btn-visit align-self-start"
-                      >Visit Website</a
+                    <a href="https://www.youtube.com/redirect?event=video_description&redir_token=QUFFLUhqbnBFUUZLMUk1dURPai05N0FhWk1OcmhsNFdyd3xBQ3Jtc0trcWx1b1dkTlBkLUpxVzhnYy1CbW1Dc0dtdHFQZHNKNjhHTFU0S0N1RHcwY3RFRjJyYUxOOThvMlRFbmV4Rk4wS2o0cFlOeDZzdFJ6TnJwMzRwVnUxUkJiNFFXcXFSdWlEUlhsTzJndGNNU2ozdzhhaw&q=https%3A%2F%2Fgithub.com%2Fthushanvithana%2FY3S1_DS_Project.git&v=-iIOJeOXfpQ" class="btn-visit align-self-start"
+                      >Project source code</a
                     >
                   </li>
                 </ul>
