--- a/index.html
+++ b/index.html
@@ -88,8 +88,6 @@
     </header>
 
     <main class="main">
-    
-
       <!-- Hero Section -->
       <section
         id="hero"
@@ -101,7 +99,7 @@
               rgba(138, 148, 177, 0)
             ),
             url('assets/img/hero-bg.jpg') no-repeat center center/cover;
-         /* Darker text for better readability */
+          /* Darker text for better readability */
           text-align: center;
           padding: 100px 20px;
           position: relative;
@@ -1840,14 +1838,7 @@
                 />
                 <div class="portfolio-info">
                   <h4>Vehicle Spare Parts Management System</h4>
-                  <p>Lorem ipsum, dolor sit</p>
-                  <a
-                    href="https://i9.ytimg.com/vi/eMMsD80Jm-w/maxresdefault.jpg?v=637c92eb&sqp=CNjRv7oG&rs=AOn4CLC5oY0fZk_HGgjFFBrE_UrioG5LDA"
-                    title="App 1"
-                    data-gallery="portfolio-gallery-app"
-                    class="glightbox preview-link"
-                    ><i class="bi bi-zoom-in"></i
-                  ></a>
+
                   <a
                     href="portfolio-details.html"
                     title="More Details"
@@ -1868,16 +1859,8 @@
                 />
                 <div class="portfolio-info">
                   <h4>ART ZONE mobile application</h4>
-                  <p>Lorem ipsum, dolor sit</p>
                   <a
-                    href="assets/img/masonry-portfolio/masonry-portfolio-2.jpg"
-                    title="Product 1"
-                    data-gallery="portfolio-gallery-product"
-                    class="glightbox preview-link"
-                    ><i class="bi bi-zoom-in"></i
-                  ></a>
-                  <a
-                    href="portfolio-details.html"
+                    href="art-project.html"
                     title="More Details"
                     class="details-link"
                     ><i class="bi bi-link-45deg"></i
@@ -1896,16 +1879,8 @@
                 />
                 <div class="portfolio-info">
                   <h4>Pharmacy prescription management system</h4>
-                  <p>Lorem ipsum, dolor sit</p>
                   <a
-                    href="assets/img/masonry-portfolio/masonry-portfolio-2.jpg"
-                    title="Product 1"
-                    data-gallery="portfolio-gallery-product"
-                    class="glightbox preview-link"
-                    ><i class="bi bi-zoom-in"></i
-                  ></a>
-                  <a
-                    href="portfolio-details.html"
+                    href="pharmacy-project.html"
                     title="More Details"
                     class="details-link"
                     ><i class="bi bi-link-45deg"></i
@@ -1924,16 +1899,8 @@
                 />
                 <div class="portfolio-info">
                   <h4>AUTOWAG - Vehile Rental System</h4>
-                  <p>Lorem ipsum, dolor sit</p>
                   <a
-                    href="assets/img/masonry-portfolio/masonry-portfolio-3.jpg"
-                    title="Branding 1"
-                    data-gallery="portfolio-gallery-branding"
-                    class="glightbox preview-link"
-                    ><i class="bi bi-zoom-in"></i
-                  ></a>
-                  <a
-                    href="portfolio-details.html"
+                    href="AUTOWAG-project.html"
                     title="More Details"
                     class="details-link"
                     ><i class="bi bi-link-45deg"></i
@@ -1952,16 +1919,8 @@
                 />
                 <div class="portfolio-info">
                   <h4>Calm Down Music Player</h4>
-                  <p>Lorem ipsum, dolor sit</p>
                   <a
-                    href="assets/img/masonry-portfolio/masonry-portfolio-4.jpg"
-                    title="App 2"
-                    data-gallery="portfolio-gallery-app"
-                    class="glightbox preview-link"
-                    ><i class="bi bi-zoom-in"></i
-                  ></a>
-                  <a
-                    href="portfolio-details.html"
+                    href="calm-project.html"
                     title="More Details"
                     class="details-link"
                     ><i class="bi bi-link-45deg"></i
@@ -1980,16 +1939,8 @@
                 />
                 <div class="portfolio-info">
                   <h4>Simple Portfolio</h4>
-                  <p>Lorem ipsum, dolor sit</p>
                   <a
-                    href="assets/img/masonry-portfolio/masonry-portfolio-5.jpg"
-                    title="Product 2"
-                    data-gallery="portfolio-gallery-product"
-                    class="glightbox preview-link"
-                    ><i class="bi bi-zoom-in"></i
-                  ></a>
-                  <a
-                    href="portfolio-details.html"
+                    href="simple -project.html"
                     title="More Details"
                     class="details-link"
                     ><i class="bi bi-link-45deg"></i
@@ -2008,16 +1959,8 @@
                 />
                 <div class="portfolio-info">
                   <h4>JAVA mobile application 2</h4>
-                  <p>Lorem ipsum, dolor sit</p>
                   <a
-                    href="assets/img/masonry-portfolio/masonry-portfolio-6.jpg"
-                    title="Branding 2"
-                    data-gallery="portfolio-gallery-branding"
-                    class="glightbox preview-link"
-                    ><i class="bi bi-zoom-in"></i
-                  ></a>
-                  <a
-                    href="portfolio-details.html"
+                    href="jAVA-project.html"
                     title="More Details"
                     class="details-link"
                     ><i class="bi bi-link-45deg"></i
@@ -2036,16 +1979,8 @@
                 />
                 <div class="portfolio-info">
                   <h4>CITIZEN Connect</h4>
-                  <p>Lorem ipsum, dolor sit</p>
                   <a
-                    href="assets/img/masonry-portfolio/masonry-portfolio-7.jpg"
-                    title="App 3"
-                    data-gallery="portfolio-gallery-app"
-                    class="glightbox preview-link"
-                    ><i class="bi bi-zoom-in"></i
-                  ></a>
-                  <a
-                    href="portfolio-details.html"
+                    href="CITIZEN-project.html"
                     title="More Details"
                     class="details-link"
                     ><i class="bi bi-link-45deg"></i
@@ -2058,22 +1993,14 @@
                 class="col-lg-4 col-md-6 portfolio-item isotope-item filter-branding"
               >
                 <img
-                  src="/assets//img/proj/maxresdefaufdgdfglt.png"
+                  src="/assets//img/proj/AUTOWAG - Vehile Rental System.jpg"
                   class="img-fluid"
                   alt=""
                 />
                 <div class="portfolio-info">
                   <h4>Microservice Architecture | MERN Stack Group Project</h4>
-                  <p>Lorem ipsum, dolor sit</p>
                   <a
-                    href="assets/img/masonry-portfolio/masonry-portfolio-8.jpg"
-                    title="Product 3"
-                    data-gallery="portfolio-gallery-product"
-                    class="glightbox preview-link"
-                    ><i class="bi bi-zoom-in"></i
-                  ></a>
-                  <a
-                    href="portfolio-details.html"
+                    href="Microservice-project.html"
                     title="More Details"
                     class="details-link"
                     ><i class="bi bi-link-45deg"></i
@@ -2092,16 +2019,8 @@
                 />
                 <div class="portfolio-info">
                   <h4>NEXT JS Portfolio</h4>
-                  <p>Lorem ipsum, dolor sit</p>
                   <a
-                    href="assets/img/masonry-portfolio/masonry-portfolio-9.jpg"
-                    title="Branding 2"
-                    data-gallery="portfolio-gallery-branding"
-                    class="glightbox preview-link"
-                    ><i class="bi bi-zoom-in"></i
-                  ></a>
-                  <a
-                    href="portfolio-details.html"
+                    href="next-project.html"
                     title="More Details"
                     class="details-link"
                     ><i class="bi bi-link-45deg"></i
@@ -2120,14 +2039,26 @@
                 />
                 <div class="portfolio-info">
                   <h4>Virtual Dressing Room</h4>
-                  <p>Lorem ipsum, dolor sit</p>
                   <a
-                    href="assets/img/masonry-portfolio/masonry-portfolio-9.jpg"
-                    title="Branding 2"
-                    data-gallery="portfolio-gallery-branding"
-                    class="glightbox preview-link"
-                    ><i class="bi bi-zoom-in"></i
+                    href="virtual-project.html"
+                    title="More Details"
+                    class="details-link"
+                    ><i class="bi bi-link-45deg"></i
                   ></a>
+                </div>
+              </div>
+              <!-- End Portfolio Item -->
+
+              <div
+                class="col-lg-4 col-md-6 portfolio-item isotope-item filter-branding filter-branding"
+              >
+                <img
+                  src="/assets//img/proj/Virtual Dressing Room.png"
+                  class="img-fluid"
+                  alt=""
+                />
+                <div class="portfolio-info">
+                  <h4>Virtual Dressing Room web app</h4>
                   <a
                     href="portfolio-details.html"
                     title="More Details"
@@ -2139,36 +2070,6 @@
               <!-- End Portfolio Item -->
 
               <div
-              class="col-lg-4 col-md-6 portfolio-item isotope-item filter-branding filter-branding"
-            >
-              <img
-                src="/assets//img/proj/Virtual Dressing Room.png"
-                class="img-fluid"
-                alt=""
-              />
-              <div class="portfolio-info">
-                <h4>Virtual Dressing Room web app</h4>
-                <p>Lorem ipsum, dolor sit</p>
-                <a
-                  href="assets/img/masonry-portfolio/masonry-portfolio-9.jpg"
-                  title="Branding 2"
-                  data-gallery="portfolio-gallery-branding"
-                  class="glightbox preview-link"
-                  ><i class="bi bi-zoom-in"></i
-                ></a>
-                <a
-                  href="portfolio-details.html"
-                  title="More Details"
-                  class="details-link"
-                  ><i class="bi bi-link-45deg"></i
-                ></a>
-              </div>
-            </div>
-            <!-- End Portfolio Item -->
-
-
-
-              <div
                 class="col-lg-4 col-md-6 portfolio-item isotope-item filter-app"
               >
                 <img
@@ -2178,16 +2079,8 @@
                 />
                 <div class="portfolio-info">
                   <h4>Mobile POS system</h4>
-                  <p>Lorem ipsum, dolor sit</p>
                   <a
-                    href="assets/img/masonry-portfolio/masonry-portfolio-9.jpg"
-                    title="Branding 2"
-                    data-gallery="portfolio-gallery-branding"
-                    class="glightbox preview-link"
-                    ><i class="bi bi-zoom-in"></i
-                  ></a>
-                  <a
-                    href="portfolio-details.html"
+                    href="mobile-project.html"
                     title="More Details"
                     class="details-link"
                     ><i class="bi bi-link-45deg"></i
@@ -2205,20 +2098,12 @@
                 />
                 <div class="portfolio-info">
                   <h4>Movie Rental System .NET</h4>
-                  <p>Lorem ipsum, dolor sit</p>
                   <a
-                    href="assets/img/masonry-portfolio/masonry-portfolio-9.jpg"
-                    title="Branding 2"
-                    data-gallery="portfolio-gallery-branding"
-                    class="glightbox preview-link"
-                    ><i class="bi bi-zoom-in"></i
-                  ></a>
-                  <a
-                    href="portfolio-details.html"
-                    title="More Details"
-                    class="details-link"
-                    ><i class="bi bi-link-45deg"></i
-                  ></a>
+                  href="movie-project.html"
+                  title="More Details"
+                  class="details-link"
+                  ><i class="bi bi-link-45deg"></i
+                ></a>
                 </div>
               </div>
               <!-- End Portfolio Item -->
@@ -2232,16 +2117,8 @@
                 />
                 <div class="portfolio-info">
                   <h4>Simple CRUD iOS App with SwiftUI and Core Data</h4>
-                  <p>Lorem ipsum, dolor sit</p>
                   <a
-                    href="assets/img/masonry-portfolio/masonry-portfolio-9.jpg"
-                    title="Branding 2"
-                    data-gallery="portfolio-gallery-branding"
-                    class="glightbox preview-link"
-                    ><i class="bi bi-zoom-in"></i
-                  ></a>
-                  <a
-                    href="portfolio-details.html"
+                    href="swift-project.html"
                     title="More Details"
                     class="details-link"
                     ><i class="bi bi-link-45deg"></i
@@ -2259,14 +2136,45 @@
                 />
                 <div class="portfolio-info">
                   <h4>Marker-based AR Dinosaur Application</h4>
-                  <p>Lorem ipsum, dolor sit</p>
                   <a
-                    href="assets/img/masonry-portfolio/masonry-portfolio-9.jpg"
-                    title="Branding 2"
-                    data-gallery="portfolio-gallery-branding"
-                    class="glightbox preview-link"
-                    ><i class="bi bi-zoom-in"></i
+                    href="marker-project.html"
+                    title="More Details"
+                    class="details-link"
+                    ><i class="bi bi-link-45deg"></i
                   ></a>
+                </div>
+              </div>
+              <!-- End Portfolio Item -->
+
+              <div
+                class="col-lg-4 col-md-6 portfolio-item isotope-item filter-app"
+              >
+                <img
+                  src="/assets//img/proj/maxresdfwfssdfdefault.jpg"
+                  class="img-fluid"
+                  alt=""
+                />
+                <div class="portfolio-info">
+                  <h4>Swift UI</h4>
+                  <a
+                    href="swiftUi-project.html"
+                    title="More Details"
+                    class="details-link"
+                    ><i class="bi bi-link-45deg"></i
+                  ></a>
+                </div>
+              </div>
+              <!-- End Portfolio Item -->
+              <div
+                class="col-lg-4 col-md-6 portfolio-item isotope-item filter-app"
+              >
+                <img
+                  src="/assets//img/proj/w0x3wktS5_0-HD.jpg"
+                  class="img-fluid"
+                  alt=""
+                />
+                <div class="portfolio-info">
+                  <h4>Branding 3</h4>
                   <a
                     href="portfolio-details.html"
                     title="More Details"
@@ -2276,74 +2184,6 @@
                 </div>
               </div>
               <!-- End Portfolio Item -->
-
-
-
-
-
-
-
-
-
-
-
-              <div
-              class="col-lg-4 col-md-6 portfolio-item isotope-item filter-app"
-            >
-              <img
-                src="/assets//img/proj/maxresdfwfssdfdefault.jpg"
-                class="img-fluid"
-                alt=""
-              />
-              <div class="portfolio-info">
-                <h4>Swift UI</h4>
-                <p>Lorem ipsum, dolor sit</p>
-                <a
-                  href="assets/img/masonry-portfolio/masonry-portfolio-9.jpg"
-                  title="Branding 2"
-                  data-gallery="portfolio-gallery-branding"
-                  class="glightbox preview-link"
-                  ><i class="bi bi-zoom-in"></i
-                ></a>
-                <a
-                  href="portfolio-details.html"
-                  title="More Details"
-                  class="details-link"
-                  ><i class="bi bi-link-45deg"></i
-                ></a>
-              </div>
-            </div>
-            <!-- End Portfolio Item -->
-            <div
-            class="col-lg-4 col-md-6 portfolio-item isotope-item filter-app"
-          >
-            <img
-              src="/assets//img/proj/w0x3wktS5_0-HD.jpg"
-              class="img-fluid"
-              alt=""
-            />
-            <div class="portfolio-info">
-              <h4>Branding 3</h4>
-              <p>Lorem ipsum, dolor sit</p>
-              <a
-                href="assets/img/masonry-portfolio/w0x3wktS5_0-HD.jpg"
-                title="Branding 2"
-                data-gallery="portfolio-gallery-branding"
-                class="glightbox preview-link"
-                ><i class="bi bi-zoom-in"></i
-              ></a>
-              <a
-                href="portfolio-details.html"
-                title="More Details"
-                class="details-link"
-                ><i class="bi bi-link-45deg"></i
-              ></a>
-            </div>
-          </div>
-          <!-- End Portfolio Item -->
-
-
-             
             </div>
             <!-- End Portfolio Container -->
           </div>
@@ -2708,7 +2548,7 @@
       <div class="container">
         <h3 class="sitename">Thushan Vithana</h3>
         <p>
-          Software Engineering student with robust design and analytical skills. 
+          Software Engineering student with robust design and analytical skills.
         </p>
         <div class="social-links d-flex justify-content-center">
           <a href=""><i class="bi bi-twitter-x"></i></a>
