--- a/movie-project.html
+++ b/movie-project.html
@@ -47,7 +47,7 @@
   ======================================================== -->
   </head>
 
-  <body class="portfolio-details-page">
+  <body class="AUTOWAG-project.html">
     <header
       id="header"
       class="header d-flex flex-column justify-content-center"
@@ -98,10 +98,10 @@
           <nav class="breadcrumbs">
             <ol>
               <li><a href="index.html">Home</a></li>
-              <li class="current">Vehicle Spare Parts Management System</li>
+              <li class="current">Movie Rental System .NET</li>
             </ol>
           </nav>
-          <h1>Vehicle Spare Parts Management System</h1>
+          <h1>Movie Rental System .NET</h1>
         </div>
       </div>
       <!-- End Page Title -->
@@ -115,7 +115,7 @@
           >
             <div class="video-wrapper">
               <iframe
-                src="https://www.youtube.com/embed/eMMsD80Jm-w"
+                src="https://www.youtube.com/embed/FPhrWGWrYbo"
                 title="YouTube video player"
                 frameborder="0"
                 allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
@@ -127,43 +127,9 @@
           <div class="row justify-content-between gy-4 mt-4">
             <div class="col-lg-8" data-aos="fade-up">
               <div class="portfolio-description">
-                <h2>This is Vehicle Spare Parts Management System</h2>
+                <h2>Movie Rental System .NET</h2>
                 <p>
-                  I have created a Vehicle Spare Parts Management System using
-                  JSP and Servlet based on the JAVA language. By using this
-                  vehicle Spare Parts Management System Stock managers can do
-                  their stock managing operation efficiently.
-                </p>
-                <p>
-                  In this system, I have to implement essential stock managing
-                  operations such as online stock payment, requesting stock
-                  details, and adding stock details. All these operations of
-                  vehicle spare parts managing. To do that, I have created the
-                  spare part manager dashboard in this system. By using this
-                  dashboard, the bank manager can easily communicate with their
-                  stakeholders
-                </p>
-
-                <p>
-                  In this system, I have to implement essential stock managing
-                  operations such as online stock payment, requesting stock
-                  details, and adding stock details. All these operations of
-                  vehicle spare parts managing. To do that, I have created the
-                  spare part manager dashboard in this system. By using this
-                  dashboard, the bank manager can easily communicate with their
-                  stakeholders
-                </p>
-
-                <p>
-                  In this system, I have to implement essential stock managing
-                  operations such as online stock payment, requesting stock
-                  details, and adding stock details. All these operations of
-                  vehicle spare parts managing. To do that, I have created the
-                  spare part manager dashboard in this system. By using this
-                  dashboard, the bank manager can easily communicate with their
-                  stakeholders
-                </p>
-              </div>
+                  •Mainly focus on UI/UX •React native, supports both Android and ios •This application allows small shops that do not have QR scanners to manage their operations efficiently. The ability to scan QR codes accurately enables them to track inventory, sales, and other essential aspects of their business. Additionally, the application provides tools to generate and display growth charts, aiding small businesses in monitoring their progress              </div>
             </div>
 
             <div class="col-lg-3" data-aos="fade-up" data-aos-delay="100">
@@ -173,8 +139,8 @@
                   <li><strong>Category</strong> Web design</li>
 
                   <li>
-                    <a href="#" class="btn-visit align-self-start"
-                      >Visit Website</a
+                    <a href="https://www.youtube.com/redirect?event=comments&redir_token=QUFFLUhqbWxFZmcwajZWQlI2Y2hzcmN3ZWdiMkpWQlhfQXxBQ3Jtc0tscU1lWjU0bUs4anFLeDBqbnIySWJ6a0lzNWxkcGo5QlM2VjRWSzh0bjFuTFpHeG5oRi1rX0tlbnUyVWV0dUJUTHdkclFCVzc1enNuTTRFUllTblo0aGJ4eWJJODVQazBOaHptVGRnbGRiY3JpTmJZNA&q=https%3A%2F%2Fgithub.com%2Fthushanvithana%2FDOTNETASSIGNMENT.git" class="btn-visit align-self-start"
+                      >Project source code</a
                     >
                   </li>
                 </ul>
