--- a/pharmacy-project.html
+++ b/pharmacy-project.html
@@ -47,7 +47,7 @@
   ======================================================== -->
   </head>
 
-  <body class="portfolio-details-page">
+  <body class="pharmacy-project.html">
     <header
       id="header"
       class="header d-flex flex-column justify-content-center"
@@ -98,10 +98,10 @@
           <nav class="breadcrumbs">
             <ol>
               <li><a href="index.html">Home</a></li>
-              <li class="current">Vehicle Spare Parts Management System</li>
+              <li class="current">Pharmacy prescription management system</li>
             </ol>
           </nav>
-          <h1>Vehicle Spare Parts Management System</h1>
+          <h1>Pharmacy prescription management system</h1>
         </div>
       </div>
       <!-- End Page Title -->
@@ -115,7 +115,7 @@
           >
             <div class="video-wrapper">
               <iframe
-                src="https://www.youtube.com/embed/eMMsD80Jm-w"
+                src="https://www.youtube.com/embed/amh_Ua-F_6s"
                 title="YouTube video player"
                 frameborder="0"
                 allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
@@ -127,42 +127,10 @@
           <div class="row justify-content-between gy-4 mt-4">
             <div class="col-lg-8" data-aos="fade-up">
               <div class="portfolio-description">
-                <h2>This is Vehicle Spare Parts Management System</h2>
+                <h2>This is a pharmacy prescription management system</h2>
                 <p>
-                  I have created a Vehicle Spare Parts Management System using
-                  JSP and Servlet based on the JAVA language. By using this
-                  vehicle Spare Parts Management System Stock managers can do
-                  their stock managing operation efficiently.
-                </p>
-                <p>
-                  In this system, I have to implement essential stock managing
-                  operations such as online stock payment, requesting stock
-                  details, and adding stock details. All these operations of
-                  vehicle spare parts managing. To do that, I have created the
-                  spare part manager dashboard in this system. By using this
-                  dashboard, the bank manager can easily communicate with their
-                  stakeholders
-                </p>
-
-                <p>
-                  In this system, I have to implement essential stock managing
-                  operations such as online stock payment, requesting stock
-                  details, and adding stock details. All these operations of
-                  vehicle spare parts managing. To do that, I have created the
-                  spare part manager dashboard in this system. By using this
-                  dashboard, the bank manager can easily communicate with their
-                  stakeholders
-                </p>
-
-                <p>
-                  In this system, I have to implement essential stock managing
-                  operations such as online stock payment, requesting stock
-                  details, and adding stock details. All these operations of
-                  vehicle spare parts managing. To do that, I have created the
-                  spare part manager dashboard in this system. By using this
-                  dashboard, the bank manager can easily communicate with their
-                  stakeholders
-                </p>
+                  In this function, there are three main parts: online prescription orders of customers, pharmacy prescription orders of pharmacists and admin part of the prescription management. Customers can easily and quickly get the medicine they need in the online prescription orders part by entering their details and uploading a prescription image online. Then the entered details are checked by the pharmacist, validated, corrected, and finally, the customer is given the required product or service promptly by the pharmacist. In pharmacy prescription orders, the product or service is provided through a prescription to the customer. The pharmacist checks the prescription letters received from the customer and, after entering the medicine into the system, checks the system and dispenses the necessary medication promptly. If required by the pharmacist, essential information can be obtained by searching. Also, this information can be updated if needed by the premises. And here, the report of the data entered in the pharmacy can also be obtained as a PDF. Finally, in the admin part of prescription managing Admin can get necessary information by searching. Also, the admin can update the information related to this prescription management system if necessary. And here, if there are problems in the data entered by the pharmacist, they can be corrected, and if the system has extraneous information, they can be deleted.                </p>
+              
               </div>
             </div>
 
@@ -173,8 +141,8 @@
                   <li><strong>Category</strong> Web design</li>
 
                   <li>
-                    <a href="#" class="btn-visit align-self-start"
-                      >Visit Website</a
+                    <a href="https://github.com/thushanvithana/MERN-STACK" class="btn-visit align-self-start"
+                      >Project source code</a
                     >
                   </li>
                 </ul>
