--- a/art-project.html
+++ b/art-project.html
@@ -47,7 +47,7 @@
   ======================================================== -->
   </head>
 
-  <body class="portfolio-details-page">
+  <body class="art-project">
     <header
       id="header"
       class="header d-flex flex-column justify-content-center"
@@ -98,10 +98,10 @@
           <nav class="breadcrumbs">
             <ol>
               <li><a href="index.html">Home</a></li>
-              <li class="current">Vehicle Spare Parts Management System</li>
+              <li class="current">ART ZONE mobile application</li>
             </ol>
           </nav>
-          <h1>Vehicle Spare Parts Management System</h1>
+          <h1>ART ZONE mobile application</h1>
         </div>
       </div>
       <!-- End Page Title -->
@@ -115,7 +115,7 @@
           >
             <div class="video-wrapper">
               <iframe
-                src="https://www.youtube.com/embed/eMMsD80Jm-w"
+                src="https://www.youtube.com/embed/j358Qa-3u6k"
                 title="YouTube video player"
                 frameborder="0"
                 allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
@@ -127,42 +127,11 @@
           <div class="row justify-content-between gy-4 mt-4">
             <div class="col-lg-8" data-aos="fade-up">
               <div class="portfolio-description">
-                <h2>This is Vehicle Spare Parts Management System</h2>
+                <h2>This is ART ZONE mobile application</h2>
                 <p>
-                  I have created a Vehicle Spare Parts Management System using
-                  JSP and Servlet based on the JAVA language. By using this
-                  vehicle Spare Parts Management System Stock managers can do
-                  their stock managing operation efficiently.
+                  According to our mobile application, I am supposed to create Event Handling and create a simple Music player as my function. By using simple sub-interface users can view events and listen to calm painting music. if there is an exhibition or art event occurs the details admin can add that new event to the application and also perform updates and delete those events. in additionally if there is a special event. admin can highlight this event, as a special event by marking a star symbol In the upper right corner of the special event. as well, the star-removing function also can perform when unnecessary. When there are many Events in this app, users can find a specific event by searching that event details as a keyword. while every function works as a user can see what s happening as a toast message. If the user wants to listen to calm music while painting, by using the sub-interface user can navigate to the music player.
                 </p>
-                <p>
-                  In this system, I have to implement essential stock managing
-                  operations such as online stock payment, requesting stock
-                  details, and adding stock details. All these operations of
-                  vehicle spare parts managing. To do that, I have created the
-                  spare part manager dashboard in this system. By using this
-                  dashboard, the bank manager can easily communicate with their
-                  stakeholders
-                </p>
-
-                <p>
-                  In this system, I have to implement essential stock managing
-                  operations such as online stock payment, requesting stock
-                  details, and adding stock details. All these operations of
-                  vehicle spare parts managing. To do that, I have created the
-                  spare part manager dashboard in this system. By using this
-                  dashboard, the bank manager can easily communicate with their
-                  stakeholders
-                </p>
-
-                <p>
-                  In this system, I have to implement essential stock managing
-                  operations such as online stock payment, requesting stock
-                  details, and adding stock details. All these operations of
-                  vehicle spare parts managing. To do that, I have created the
-                  spare part manager dashboard in this system. By using this
-                  dashboard, the bank manager can easily communicate with their
-                  stakeholders
-                </p>
+              
               </div>
             </div>
 
@@ -173,8 +142,8 @@
                   <li><strong>Category</strong> Web design</li>
 
                   <li>
-                    <a href="#" class="btn-visit align-self-start"
-                      >Visit Website</a
+                    <a href="https://github.com/thushanvithana/Binary-Brains" class="btn-visit align-self-start"
+                      >Project source code</a
                     >
                   </li>
                 </ul>
