--- a/next-project.html
+++ b/next-project.html
@@ -47,7 +47,7 @@
   ======================================================== -->
   </head>
 
-  <body class="portfolio-details-page">
+  <body class="AUTOWAG-project.html">
     <header
       id="header"
       class="header d-flex flex-column justify-content-center"
@@ -98,10 +98,10 @@
           <nav class="breadcrumbs">
             <ol>
               <li><a href="index.html">Home</a></li>
-              <li class="current">Vehicle Spare Parts Management System</li>
+              <li class="current">NEXT JS Portfolio</li>
             </ol>
           </nav>
-          <h1>Vehicle Spare Parts Management System</h1>
+          <h1>NEXT JS Portfolio</h1>
         </div>
       </div>
       <!-- End Page Title -->
@@ -115,7 +115,7 @@
           >
             <div class="video-wrapper">
               <iframe
-                src="https://www.youtube.com/embed/eMMsD80Jm-w"
+                src="https://www.youtube.com/embed/RVMR4b8lfx8"
                 title="YouTube video player"
                 frameborder="0"
                 allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
@@ -127,43 +127,9 @@
           <div class="row justify-content-between gy-4 mt-4">
             <div class="col-lg-8" data-aos="fade-up">
               <div class="portfolio-description">
-                <h2>This is Vehicle Spare Parts Management System</h2>
+                <h2>This is a NEXT JS Portfolio</h2>
                 <p>
-                  I have created a Vehicle Spare Parts Management System using
-                  JSP and Servlet based on the JAVA language. By using this
-                  vehicle Spare Parts Management System Stock managers can do
-                  their stock managing operation efficiently.
-                </p>
-                <p>
-                  In this system, I have to implement essential stock managing
-                  operations such as online stock payment, requesting stock
-                  details, and adding stock details. All these operations of
-                  vehicle spare parts managing. To do that, I have created the
-                  spare part manager dashboard in this system. By using this
-                  dashboard, the bank manager can easily communicate with their
-                  stakeholders
-                </p>
-
-                <p>
-                  In this system, I have to implement essential stock managing
-                  operations such as online stock payment, requesting stock
-                  details, and adding stock details. All these operations of
-                  vehicle spare parts managing. To do that, I have created the
-                  spare part manager dashboard in this system. By using this
-                  dashboard, the bank manager can easily communicate with their
-                  stakeholders
-                </p>
-
-                <p>
-                  In this system, I have to implement essential stock managing
-                  operations such as online stock payment, requesting stock
-                  details, and adding stock details. All these operations of
-                  vehicle spare parts managing. To do that, I have created the
-                  spare part manager dashboard in this system. By using this
-                  dashboard, the bank manager can easily communicate with their
-                  stakeholders
-                </p>
-              </div>
+                  Here are some of the projects that i have done. Check out my Youtube Channel for more Used Technologies In This Project: • NEXT js              </div>
             </div>
 
             <div class="col-lg-3" data-aos="fade-up" data-aos-delay="100">
@@ -173,8 +139,8 @@
                   <li><strong>Category</strong> Web design</li>
 
                   <li>
-                    <a href="#" class="btn-visit align-self-start"
-                      >Visit Website</a
+                    <a href="https://www.youtube.com/redirect?event=video_description&redir_token=QUFFLUhqbVhkTi1aNThfRTJkMTlzUWx2TWs1SE5vRjNad3xBQ3Jtc0treWplOGxsVVRoN2VmUzNicWFsTm9SOUdJcy01SVB6ZUh1ZGxWVnluVVIxeXo0MlNCbVBEZUJ0cEtUbTlkQ1lkQzdIZ3V4Z1gwT3RSUS13T3F3RTdZTE9VR1A1eDVhR0VaX2lRTk9xRnFYdDE3V1AwOA&q=https%3A%2F%2Fgithub.com%2Fthushanvithana%2FAF_Assignment.git&v=MDQUHkyAGxQ" class="btn-visit align-self-start"
+                      >Project source code</a
                     >
                   </li>
                 </ul>
